--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^3.1.11
   cloud_firestore_web: ^2.6.11
   geolocator: ^8.2.0
+  shared_preferences: ^2.0.13
   baseflow_plugin_template:
     git:
       url: https://github.com/Baseflow/baseflow_plugin_template.git
